# librfat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/minifs/: minifs.h
include/rfat/: rfat.h  types.h
src/: CMakeLists.txt  helper.h  minifs.c  rfat.c  rfat_close.c  rfat_create.c  rfat_fs_close.c  rfat_fs_init.c  rfat_fs_open.c  rfat_fs_validate.c  rfat_fs_zip.c  rfat_open.c  rfat_read.c  rfat_write.c  typedefs.h  types.h
src/backend/: backend.h  posix.c  zephyr.c
test/: CMakeLists.txt  helper.hpp  minifs_tests.cpp  rfat_file_test.cpp  rfat_fs_test.cpp  rfat_tests.cpp  type_size_test.cpp
